--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node ./scripts/seed.js"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.8.0",
+    "bcrypt": "^5.1.1",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.17",
     "react": "^18",
