--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "node ./scripts/seed.js"
+    "seed": "node --env-file=.env.local ./scripts/seed.js"
   },
   "dependencies": {
     "@vercel/postgres": "^0.8.0",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.17",
     "react": "^18",
