--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.17",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
