--- a/package.json
+++ b/package.json
@@ -17,22 +17,22 @@
         "next-auth": "^5.0.0-beta.17",
         "react": "^18",
         "react-dom": "^18",
-        "zod": "^3.23.5",
         "supertokens-auth-react": "latest",
         "supertokens-node": "latest",
-        "supertokens-web-js": "^0.10.1"
+        "supertokens-web-js": "^0.10.1",
+        "zod": "^3.23.5"
     },
     "devDependencies": {
-        "@types/cookie": "^0.5.2",
         "@types/bcrypt": "^5.0.2",
+        "@types/cookie": "^0.5.2",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "eslint": "^8",
         "eslint-config-next": "14.2.3",
+        "i": "^0.3.7",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
-        "typescript": "^5",
-        "i": "^0.3.7"
+        "typescript": "^5"
     }
 }
